--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ annotated-types==0.7.0
 anyio==4.10.0
 asyncpg==0.30.0
 certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
 click==8.2.1
+cryptography==45.0.6
 deprecation==2.1.0
+ecdsa==0.19.1
 fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
@@ -16,12 +20,17 @@ idna==3.10
 packaging==25.0
 postgrest==1.1.1
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
 realtime==2.7.0
+requests==2.32.4
+rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
@@ -33,5 +42,6 @@ supabase_auth==2.12.3
 supabase_functions==0.10.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+urllib3==2.5.0
 uvicorn==0.35.0
 websockets==15.0.1
