--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,18 @@ charset-normalizer==3.4.3
 click==8.2.1
 cryptography==45.0.6
 deprecation==2.1.0
+dnspython==2.7.0
 ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
-httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+jiwer==4.0.0
 packaging==25.0
 postgrest==1.1.1
 psycopg2-binary==2.9.10
@@ -27,9 +29,11 @@ pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-jose==3.5.0
+python-multipart==0.0.20
+RapidFuzz==3.14.0
 realtime==2.7.0
 requests==2.32.4
+rev_ai==2.21.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -44,4 +48,5 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+websocket-client==0.59.0
 websockets==15.0.1
