--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.10.0
+assemblyai==0.43.1
 asyncpg==0.30.0
 certifi==2025.8.3
 cffi==1.17.1
@@ -15,6 +16,7 @@ greenlet==3.2.4
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
+httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
@@ -29,6 +31,7 @@ pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 RapidFuzz==3.14.0
 realtime==2.7.0
