--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 assemblyai==0.43.1
@@ -21,6 +22,8 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 jiwer==4.0.0
+Mako==1.3.10
+MarkupSafe==3.0.2
 packaging==25.0
 postgrest==1.1.1
 psycopg2-binary==2.9.10
